--- a/nginx_conf/docker.conf
+++ b/nginx_conf/docker.conf
@@ -14,6 +14,6 @@ server {
     }
     location / {
         index index.php;
-        rewrite ^(.*)$ /Public/index.php?$1 last;
+        rewrite ^(.*)$ /public/index.php?$1 last;
     }
 }
