--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
   php-fpm:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: ./php_fpm/Dockerfile
     volumes:
       - ./www:/var/www/app
   postgresql:
@@ -22,7 +22,7 @@ services:
       - "5432:5432"
     volumes:
       - postgresql:/var/lib/postgresql/data
-      - ./create.sql:/docker-entrypoint-initdb.d/create.sql
+      - ./www/src/Migrations/create.sql:/docker-entrypoint-initdb.d/create.sql
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: otus
